@@ -1,3 +1,10 @@
+Tue Jan 15 14:37:15 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* m4/man-bdb.m4: Add WITH-DB option; make ACTION-IF-FOUND optional;
+	  define BDB_H and BTREE.
+	* configure.ac: Make Berkeley DB checks more concise using the
+	  above.
+
 Tue Jan 15 12:31:12 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Remove unused AC_HEADER_STDC.
